--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/mpark019/mern_project#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2"
   }
