--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
+# Dependencies
+node_modules/
+
+# Environment variables
+.env
 config.env
-server/config.env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Build files
+dist/
+build/
+
