--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
-    "nodemailer": "^7.0.10"
+    "nodemailer": "^7.0.10",
+    "openai": "^6.9.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
