--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
     "react": "^19.2.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
     "tailwind-merge": "^3.3.1",
